--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <title>{{ title }}</title>
   </head>
   <body>
-    {{ title }}
+    <h1>{{ title }}</h1>
     <app-user></app-user>
   </body>
 </html>
